sdk-docs_versioned_docs/version-26.1.x/enums/Types/EventIdEnum/EventIdEnum.md
---
id: "EventIdEnum"
title: "Enumeration: EventIdEnum"
sidebar_label: "EventIdEnum"
---

[types](../../../modules/Types/Types.md).EventIdEnum

Events are emitted when chain state is changed. This enum represents all known events

## Enumeration Members

### AcceptedPayingKey

• **AcceptedPayingKey** = ``"AcceptedPayingKey"``

#### Defined in

[middleware/types.ts:77870](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77870)

___

### AccountAssetFrozen

• **AccountAssetFrozen** = ``"AccountAssetFrozen"``

#### Defined in

[middleware/types.ts:77871](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77871)

___

### AccountAssetUnfrozen

• **AccountAssetUnfrozen** = ``"AccountAssetUnfrozen"``

#### Defined in

[middleware/types.ts:77872](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77872)

___

### AccountBalanceBurned

• **AccountBalanceBurned** = ``"AccountBalanceBurned"``

#### Defined in

[middleware/types.ts:77873](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77873)

___

### AccountCreated

• **AccountCreated** = ``"AccountCreated"``

#### Defined in

[middleware/types.ts:77874](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77874)

___

### AccountDeposit

• **AccountDeposit** = ``"AccountDeposit"``

#### Defined in

[middleware/types.ts:77875](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77875)

___

### AccountDepositIncoming

• **AccountDepositIncoming** = ``"AccountDepositIncoming"``

#### Defined in

[middleware/types.ts:77876](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77876)

___

### AccountWithdraw

• **AccountWithdraw** = ``"AccountWithdraw"``

#### Defined in

[middleware/types.ts:77877](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77877)

___

### ActiveLimitChanged

• **ActiveLimitChanged** = ``"ActiveLimitChanged"``

#### Defined in

[middleware/types.ts:77878](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77878)

___

### ActivePipLimitChanged

• **ActivePipLimitChanged** = ``"ActivePipLimitChanged"``

#### Defined in

[middleware/types.ts:77879](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77879)

___

### AdminChanged

• **AdminChanged** = ``"AdminChanged"``

#### Defined in

[middleware/types.ts:77880](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77880)

___

### AffirmationWithdrawn

• **AffirmationWithdrawn** = ``"AffirmationWithdrawn"``

#### Defined in

[middleware/types.ts:77881](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77881)

___

### AgentAdded

• **AgentAdded** = ``"AgentAdded"``

#### Defined in

[middleware/types.ts:77882](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77882)

___

### AgentRemoved

• **AgentRemoved** = ``"AgentRemoved"``

#### Defined in

[middleware/types.ts:77883](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77883)

___

### AllGood

• **AllGood** = ``"AllGood"``

#### Defined in

[middleware/types.ts:77884](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77884)

___

### ApiHashUpdated

• **ApiHashUpdated** = ``"ApiHashUpdated"``

#### Defined in

[middleware/types.ts:77885](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77885)

___

### Approval

• **Approval** = ``"Approval"``

#### Defined in

[middleware/types.ts:77886](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77886)

___

### Approved

• **Approved** = ``"Approved"``

#### Defined in

[middleware/types.ts:77887](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77887)

___

### AssetAffirmationExemption

• **AssetAffirmationExemption** = ``"AssetAffirmationExemption"``

#### Defined in

[middleware/types.ts:77888](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77888)

___

### AssetBalanceUpdated

• **AssetBalanceUpdated** = ``"AssetBalanceUpdated"``

#### Defined in

[middleware/types.ts:77889](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77889)

___

### AssetCompliancePaused

• **AssetCompliancePaused** = ``"AssetCompliancePaused"``

#### Defined in

[middleware/types.ts:77890](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77890)

___

### AssetComplianceReplaced

• **AssetComplianceReplaced** = ``"AssetComplianceReplaced"``

#### Defined in

[middleware/types.ts:77891](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77891)

___

### AssetComplianceReset

• **AssetComplianceReset** = ``"AssetComplianceReset"``

#### Defined in

[middleware/types.ts:77892](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77892)

___

### AssetComplianceResumed

• **AssetComplianceResumed** = ``"AssetComplianceResumed"``

#### Defined in

[middleware/types.ts:77893](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77893)

___

### AssetCreated

• **AssetCreated** = ``"AssetCreated"``

#### Defined in

[middleware/types.ts:77894](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77894)

___

### AssetDidRegistered

• **AssetDidRegistered** = ``"AssetDidRegistered"``

#### Defined in

[middleware/types.ts:77895](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77895)

___

### AssetFrozen

• **AssetFrozen** = ``"AssetFrozen"``

#### Defined in

[middleware/types.ts:77896](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77896)

___

### AssetMediatorsAdded

• **AssetMediatorsAdded** = ``"AssetMediatorsAdded"``

#### Defined in

[middleware/types.ts:77897](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77897)

___

### AssetMediatorsRemoved

• **AssetMediatorsRemoved** = ``"AssetMediatorsRemoved"``

#### Defined in

[middleware/types.ts:77898](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77898)

___

### AssetOwnershipTransferred

• **AssetOwnershipTransferred** = ``"AssetOwnershipTransferred"``

#### Defined in

[middleware/types.ts:77899](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77899)

___

### AssetPurchased

• **AssetPurchased** = ``"AssetPurchased"``

#### Defined in

[middleware/types.ts:77900](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77900)

___

### AssetRenamed

• **AssetRenamed** = ``"AssetRenamed"``

#### Defined in

[middleware/types.ts:77901](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77901)

___

### AssetRuleChanged

• **AssetRuleChanged** = ``"AssetRuleChanged"``

#### Defined in

[middleware/types.ts:77902](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77902)

___

### AssetRuleRemoved

• **AssetRuleRemoved** = ``"AssetRuleRemoved"``

#### Defined in

[middleware/types.ts:77903](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77903)

___

### AssetRulesPaused

• **AssetRulesPaused** = ``"AssetRulesPaused"``

#### Defined in

[middleware/types.ts:77904](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77904)

___

### AssetRulesReplaced

• **AssetRulesReplaced** = ``"AssetRulesReplaced"``

#### Defined in

[middleware/types.ts:77905](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77905)

___

### AssetRulesReset

• **AssetRulesReset** = ``"AssetRulesReset"``

#### Defined in

[middleware/types.ts:77906](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77906)

___

### AssetRulesResumed

• **AssetRulesResumed** = ``"AssetRulesResumed"``

#### Defined in

[middleware/types.ts:77907](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77907)

___

### AssetStatsUpdated

• **AssetStatsUpdated** = ``"AssetStatsUpdated"``

#### Defined in

[middleware/types.ts:77908](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77908)

___

### AssetTypeChanged

• **AssetTypeChanged** = ``"AssetTypeChanged"``

#### Defined in

[middleware/types.ts:77909](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77909)

___

### AssetUnfrozen

• **AssetUnfrozen** = ``"AssetUnfrozen"``

#### Defined in

[middleware/types.ts:77910](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77910)

___

### AuthorizationAdded

• **AuthorizationAdded** = ``"AuthorizationAdded"``

#### Defined in

[middleware/types.ts:77911](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77911)

___

### AuthorizationConsumed

• **AuthorizationConsumed** = ``"AuthorizationConsumed"``

#### Defined in

[middleware/types.ts:77912](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77912)

___

### AuthorizationRejected

• **AuthorizationRejected** = ``"AuthorizationRejected"``

#### Defined in

[middleware/types.ts:77913](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77913)

___

### AuthorizationRetryLimitReached

• **AuthorizationRetryLimitReached** = ``"AuthorizationRetryLimitReached"``

#### Defined in

[middleware/types.ts:77914](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77914)

___

### AuthorizationRevoked

• **AuthorizationRevoked** = ``"AuthorizationRevoked"``

#### Defined in

[middleware/types.ts:77915](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77915)

___

### AuthorizedPayingKey

• **AuthorizedPayingKey** = ``"AuthorizedPayingKey"``

#### Defined in

[middleware/types.ts:77916](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77916)

___

### BalanceSet

• **BalanceSet** = ``"BalanceSet"``

#### Defined in

[middleware/types.ts:77917](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77917)

___

### BallotCancelled

• **BallotCancelled** = ``"BallotCancelled"``

#### Defined in

[middleware/types.ts:77918](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77918)

___

### BallotCreated

• **BallotCreated** = ``"BallotCreated"``

#### Defined in

[middleware/types.ts:77919](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77919)

___

### BatchCompleted

• **BatchCompleted** = ``"BatchCompleted"``

#### Defined in

[middleware/types.ts:77920](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77920)

___

### BatchCompletedOld

• **BatchCompletedOld** = ``"BatchCompletedOld"``

#### Defined in

[middleware/types.ts:77921](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77921)

___

### BatchCompletedWithErrors

• **BatchCompletedWithErrors** = ``"BatchCompletedWithErrors"``

#### Defined in

[middleware/types.ts:77922](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77922)

___

### BatchInterrupted

• **BatchInterrupted** = ``"BatchInterrupted"``

#### Defined in

[middleware/types.ts:77923](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77923)

___

### BatchInterruptedOld

• **BatchInterruptedOld** = ``"BatchInterruptedOld"``

#### Defined in

[middleware/types.ts:77924](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77924)

___

### BatchOptimisticFailed

• **BatchOptimisticFailed** = ``"BatchOptimisticFailed"``

#### Defined in

[middleware/types.ts:77925](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77925)

___

### BenefitClaimed

• **BenefitClaimed** = ``"BenefitClaimed"``

#### Defined in

[middleware/types.ts:77926](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77926)

___

### Bonded

• **Bonded** = ``"Bonded"``

#### Defined in

[middleware/types.ts:77927](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77927)

___

### BridgeLimitUpdated

• **BridgeLimitUpdated** = ``"BridgeLimitUpdated"``

#### Defined in

[middleware/types.ts:77928](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77928)

___

### BridgeTxFailed

• **BridgeTxFailed** = ``"BridgeTxFailed"``

#### Defined in

[middleware/types.ts:77929](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77929)

___

### BridgeTxScheduleFailed

• **BridgeTxScheduleFailed** = ``"BridgeTxScheduleFailed"``

#### Defined in

[middleware/types.ts:77930](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77930)

___

### BridgeTxScheduled

• **BridgeTxScheduled** = ``"BridgeTxScheduled"``

#### Defined in

[middleware/types.ts:77931](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77931)

___

### Bridged

• **Bridged** = ``"Bridged"``

#### Defined in

[middleware/types.ts:77932](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77932)

___

### Burned

• **Burned** = ``"Burned"``

#### Defined in

[middleware/types.ts:77933](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77933)

___

### CaInitiated

• **CaInitiated** = ``"CAInitiated"``

#### Defined in

[middleware/types.ts:77935](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77935)

___

### CaLinkedToDoc

• **CaLinkedToDoc** = ``"CALinkedToDoc"``

#### Defined in

[middleware/types.ts:77936](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77936)

___

### CaRemoved

• **CaRemoved** = ``"CARemoved"``

#### Defined in

[middleware/types.ts:77937](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77937)

___

### CaaTransferred

• **CaaTransferred** = ``"CAATransferred"``

#### Defined in

[middleware/types.ts:77934](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77934)

___

### CallLookupFailed

• **CallLookupFailed** = ``"CallLookupFailed"``

#### Defined in

[middleware/types.ts:77938](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77938)

___

### CallUnavailable

• **CallUnavailable** = ``"CallUnavailable"``

#### Defined in

[middleware/types.ts:77939](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77939)

___

### Called

• **Called** = ``"Called"``

#### Defined in

[middleware/types.ts:77940](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77940)

___

### Canceled

• **Canceled** = ``"Canceled"``

#### Defined in

[middleware/types.ts:77941](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77941)

___

### CddClaimsInvalidated

• **CddClaimsInvalidated** = ``"CddClaimsInvalidated"``

#### Defined in

[middleware/types.ts:77942](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77942)

___

### CddRequirementForMasterKeyUpdated

• **CddRequirementForMasterKeyUpdated** = ``"CddRequirementForMasterKeyUpdated"``

#### Defined in

[middleware/types.ts:77943](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77943)

___

### CddRequirementForPrimaryKeyUpdated

• **CddRequirementForPrimaryKeyUpdated** = ``"CddRequirementForPrimaryKeyUpdated"``

#### Defined in

[middleware/types.ts:77944](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77944)

___

### CddStatus

• **CddStatus** = ``"CddStatus"``

#### Defined in

[middleware/types.ts:77945](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77945)

___

### CheckpointCreated

• **CheckpointCreated** = ``"CheckpointCreated"``

#### Defined in

[middleware/types.ts:77946](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77946)

___

### ChildDidCreated

• **ChildDidCreated** = ``"ChildDidCreated"``

#### Defined in

[middleware/types.ts:77947](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77947)

___

### ChildDidUnlinked

• **ChildDidUnlinked** = ``"ChildDidUnlinked"``

#### Defined in

[middleware/types.ts:77948](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77948)

___

### Chilled

• **Chilled** = ``"Chilled"``

#### Defined in

[middleware/types.ts:77949](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77949)

___

### ClaimAdded

• **ClaimAdded** = ``"ClaimAdded"``

#### Defined in

[middleware/types.ts:77950](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77950)

___

### ClaimRevoked

• **ClaimRevoked** = ``"ClaimRevoked"``

#### Defined in

[middleware/types.ts:77951](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77951)

___

### ClassicTickerClaimed

• **ClassicTickerClaimed** = ``"ClassicTickerClaimed"``

#### Defined in

[middleware/types.ts:77952](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77952)

___

### Cleared

• **Cleared** = ``"Cleared"``

#### Defined in

[middleware/types.ts:77953](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77953)

___

### Closed

• **Closed** = ``"Closed"``

#### Defined in

[middleware/types.ts:77954](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77954)

___

### CodeRemoved

• **CodeRemoved** = ``"CodeRemoved"``

#### Defined in

[middleware/types.ts:77955](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77955)

___

### CodeStored

• **CodeStored** = ``"CodeStored"``

#### Defined in

[middleware/types.ts:77956](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77956)

___

### CodeUpdated

• **CodeUpdated** = ``"CodeUpdated"``

#### Defined in

[middleware/types.ts:77957](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77957)

___

### CoefficientSet

• **CoefficientSet** = ``"CoefficientSet"``

#### Defined in

[middleware/types.ts:77958](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77958)

___

### CommissionCapUpdated

• **CommissionCapUpdated** = ``"CommissionCapUpdated"``

#### Defined in

[middleware/types.ts:77959](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77959)

___

### ComplianceRequirementChanged

• **ComplianceRequirementChanged** = ``"ComplianceRequirementChanged"``

#### Defined in

[middleware/types.ts:77960](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77960)

___

### ComplianceRequirementCreated

• **ComplianceRequirementCreated** = ``"ComplianceRequirementCreated"``

#### Defined in

[middleware/types.ts:77961](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77961)

___

### ComplianceRequirementRemoved

• **ComplianceRequirementRemoved** = ``"ComplianceRequirementRemoved"``

#### Defined in

[middleware/types.ts:77962](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77962)

___

### ContractCodeUpdated

• **ContractCodeUpdated** = ``"ContractCodeUpdated"``

#### Defined in

[middleware/types.ts:77963](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77963)

___

### ContractEmitted

• **ContractEmitted** = ``"ContractEmitted"``

#### Defined in

[middleware/types.ts:77964](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77964)

___

### ContractExecution

• **ContractExecution** = ``"ContractExecution"``

#### Defined in

[middleware/types.ts:77965](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77965)

___

### ControllerChanged

• **ControllerChanged** = ``"ControllerChanged"``

#### Defined in

[middleware/types.ts:77966](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77966)

___

### ControllerRedemption

• **ControllerRedemption** = ``"ControllerRedemption"``

#### Defined in

[middleware/types.ts:77967](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77967)

___

### ControllerTransfer

• **ControllerTransfer** = ``"ControllerTransfer"``

#### Defined in

[middleware/types.ts:77968](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77968)

___

### Created

• **Created** = ``"Created"``

#### Defined in

[middleware/types.ts:77969](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77969)

___

### CustodyAllowanceChanged

• **CustodyAllowanceChanged** = ``"CustodyAllowanceChanged"``

#### Defined in

[middleware/types.ts:77970](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77970)

___

### CustodyTransfer

• **CustodyTransfer** = ``"CustodyTransfer"``

#### Defined in

[middleware/types.ts:77971](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77971)

___

### CustomAssetTypeExists

• **CustomAssetTypeExists** = ``"CustomAssetTypeExists"``

#### Defined in

[middleware/types.ts:77972](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77972)

___

### CustomAssetTypeRegistered

• **CustomAssetTypeRegistered** = ``"CustomAssetTypeRegistered"``

#### Defined in

[middleware/types.ts:77973](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77973)

___

### CustomClaimTypeAdded

• **CustomClaimTypeAdded** = ``"CustomClaimTypeAdded"``

#### Defined in

[middleware/types.ts:77974](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77974)

___

### DefaultEnactmentPeriodChanged

• **DefaultEnactmentPeriodChanged** = ``"DefaultEnactmentPeriodChanged"``

#### Defined in

[middleware/types.ts:77975](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77975)

___

### DefaultTargetIdentitiesChanged

• **DefaultTargetIdentitiesChanged** = ``"DefaultTargetIdentitiesChanged"``

#### Defined in

[middleware/types.ts:77976](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77976)

___

### DefaultWithholdingTaxChanged

• **DefaultWithholdingTaxChanged** = ``"DefaultWithholdingTaxChanged"``

#### Defined in

[middleware/types.ts:77977](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77977)

___

### DelegateCalled

• **DelegateCalled** = ``"DelegateCalled"``

#### Defined in

[middleware/types.ts:77978](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77978)

___

### DidCreated

• **DidCreated** = ``"DidCreated"``

#### Defined in

[middleware/types.ts:77979](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77979)

___

### DidStatus

• **DidStatus** = ``"DidStatus"``

#### Defined in

[middleware/types.ts:77980](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77980)

___

### DidWithholdingTaxChanged

• **DidWithholdingTaxChanged** = ``"DidWithholdingTaxChanged"``

#### Defined in

[middleware/types.ts:77981](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77981)

___

### Dispatched

• **Dispatched** = ``"Dispatched"``

#### Defined in

[middleware/types.ts:77982](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77982)

___

### DispatchedAs

• **DispatchedAs** = ``"DispatchedAs"``

#### Defined in

[middleware/types.ts:77983](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77983)

___

### DividendCanceled

• **DividendCanceled** = ``"DividendCanceled"``

#### Defined in

[middleware/types.ts:77984](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77984)

___

### DividendCreated

• **DividendCreated** = ``"DividendCreated"``

#### Defined in

[middleware/types.ts:77985](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77985)

___

### DividendPaidOutToUser

• **DividendPaidOutToUser** = ``"DividendPaidOutToUser"``

#### Defined in

[middleware/types.ts:77986](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77986)

___

### DividendRemainingClaimed

• **DividendRemainingClaimed** = ``"DividendRemainingClaimed"``

#### Defined in

[middleware/types.ts:77987](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77987)

___

### DivisibilityChanged

• **DivisibilityChanged** = ``"DivisibilityChanged"``

#### Defined in

[middleware/types.ts:77988](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77988)

___

### DocumentAdded

• **DocumentAdded** = ``"DocumentAdded"``

#### Defined in

[middleware/types.ts:77989](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77989)

___

### DocumentRemoved

• **DocumentRemoved** = ``"DocumentRemoved"``

#### Defined in

[middleware/types.ts:77990](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77990)

___

### Dummy

• **Dummy** = ``"Dummy"``

#### Defined in

[middleware/types.ts:77991](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77991)

___

### ElectionFailed

• **ElectionFailed** = ``"ElectionFailed"``

#### Defined in

[middleware/types.ts:77992](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77992)

___

### ElectionFinalized

• **ElectionFinalized** = ``"ElectionFinalized"``

#### Defined in

[middleware/types.ts:77993](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77993)

___

### Endowed

• **Endowed** = ``"Endowed"``

#### Defined in

[middleware/types.ts:77994](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77994)

___

### EraPaid

• **EraPaid** = ``"EraPaid"``

#### Defined in

[middleware/types.ts:77995](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77995)

___

### EraPayout

• **EraPayout** = ``"EraPayout"``

#### Defined in

[middleware/types.ts:77996](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77996)

___

### Evicted

• **Evicted** = ``"Evicted"``

#### Defined in

[middleware/types.ts:77997](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77997)

___

### Executed

• **Executed** = ``"Executed"``

#### Defined in

[middleware/types.ts:77998](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77998)

___

### ExecutionCancellingFailed

• **ExecutionCancellingFailed** = ``"ExecutionCancellingFailed"``

#### Defined in

[middleware/types.ts:77999](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L77999)

___

### ExecutionScheduled

• **ExecutionScheduled** = ``"ExecutionScheduled"``

#### Defined in

[middleware/types.ts:78000](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78000)

___

### ExecutionSchedulingFailed

• **ExecutionSchedulingFailed** = ``"ExecutionSchedulingFailed"``

#### Defined in

[middleware/types.ts:78001](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78001)

___

### ExemptedUpdated

• **ExemptedUpdated** = ``"ExemptedUpdated"``

#### Defined in

[middleware/types.ts:78002](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78002)

___

### ExemptionListModified

• **ExemptionListModified** = ``"ExemptionListModified"``

#### Defined in

[middleware/types.ts:78003](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78003)

___

### ExemptionsAdded

• **ExemptionsAdded** = ``"ExemptionsAdded"``

#### Defined in

[middleware/types.ts:78004](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78004)

___

### ExemptionsRemoved

• **ExemptionsRemoved** = ``"ExemptionsRemoved"``

#### Defined in

[middleware/types.ts:78005](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78005)

___

### ExpiresAfterUpdated

• **ExpiresAfterUpdated** = ``"ExpiresAfterUpdated"``

#### Defined in

[middleware/types.ts:78006](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78006)

___

### ExpiryScheduled

• **ExpiryScheduled** = ``"ExpiryScheduled"``

#### Defined in

[middleware/types.ts:78007](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78007)

___

### ExpirySchedulingFailed

• **ExpirySchedulingFailed** = ``"ExpirySchedulingFailed"``

#### Defined in

[middleware/types.ts:78008](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78008)

___

### ExtensionAdded

• **ExtensionAdded** = ``"ExtensionAdded"``

#### Defined in

[middleware/types.ts:78009](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78009)

___

### ExtensionArchived

• **ExtensionArchived** = ``"ExtensionArchived"``

#### Defined in

[middleware/types.ts:78010](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78010)

___

### ExtensionRemoved

• **ExtensionRemoved** = ``"ExtensionRemoved"``

#### Defined in

[middleware/types.ts:78011](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78011)

___

### ExtensionUnArchive

• **ExtensionUnArchive** = ``"ExtensionUnArchive"``

#### Defined in

[middleware/types.ts:78012](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78012)

___

### ExtrinsicFailed

• **ExtrinsicFailed** = ``"ExtrinsicFailed"``

#### Defined in

[middleware/types.ts:78013](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78013)

___

### ExtrinsicSuccess

• **ExtrinsicSuccess** = ``"ExtrinsicSuccess"``

#### Defined in

[middleware/types.ts:78014](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78014)

___

### FailedToExecuteInstruction

• **FailedToExecuteInstruction** = ``"FailedToExecuteInstruction"``

#### Defined in

[middleware/types.ts:78015](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78015)

___

### FeeCharged

• **FeeCharged** = ``"FeeCharged"``

#### Defined in

[middleware/types.ts:78016](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78016)

___

### FeeSet

• **FeeSet** = ``"FeeSet"``

#### Defined in

[middleware/types.ts:78017](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78017)

___

### FinalVotes

• **FinalVotes** = ``"FinalVotes"``

#### Defined in

[middleware/types.ts:78018](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78018)

___

### ForceEra

• **ForceEra** = ``"ForceEra"``

#### Defined in

[middleware/types.ts:78019](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78019)

___

### FreezeAdminAdded

• **FreezeAdminAdded** = ``"FreezeAdminAdded"``

#### Defined in

[middleware/types.ts:78020](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78020)

___

### FreezeAdminRemoved

• **FreezeAdminRemoved** = ``"FreezeAdminRemoved"``

#### Defined in

[middleware/types.ts:78021](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78021)

___

### Frozen

• **Frozen** = ``"Frozen"``

#### Defined in

[middleware/types.ts:78022](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78022)

___

### FrozenTx

• **FrozenTx** = ``"FrozenTx"``

#### Defined in

[middleware/types.ts:78023](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78023)

___

### FundingRoundSet

• **FundingRoundSet** = ``"FundingRoundSet"``

#### Defined in

[middleware/types.ts:78024](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78024)

___

### FundraiserClosed

• **FundraiserClosed** = ``"FundraiserClosed"``

#### Defined in

[middleware/types.ts:78025](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78025)

___

### FundraiserCreated

• **FundraiserCreated** = ``"FundraiserCreated"``

#### Defined in

[middleware/types.ts:78026](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78026)

___

### FundraiserFrozen

• **FundraiserFrozen** = ``"FundraiserFrozen"``

#### Defined in

[middleware/types.ts:78027](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78027)

___

### FundraiserUnfrozen

• **FundraiserUnfrozen** = ``"FundraiserUnfrozen"``

#### Defined in

[middleware/types.ts:78028](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78028)

___

### FundraiserWindowModifed

• **FundraiserWindowModifed** = ``"FundraiserWindowModifed"``

#### Defined in

[middleware/types.ts:78029](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78029)

___

### FundraiserWindowModified

• **FundraiserWindowModified** = ``"FundraiserWindowModified"``

#### Defined in

[middleware/types.ts:78030](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78030)

___

### FundsMoved

• **FundsMoved** = ``"FundsMoved"``

#### Defined in

[middleware/types.ts:78031](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78031)

___

### FundsMovedBetweenPortfolios

• **FundsMovedBetweenPortfolios** = ``"FundsMovedBetweenPortfolios"``

#### Defined in

[middleware/types.ts:78032](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78032)

___

### FundsRaised

• **FundsRaised** = ``"FundsRaised"``

#### Defined in

[middleware/types.ts:78033](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78033)

___

### FungibleTokensMovedBetweenPortfolios

• **FungibleTokensMovedBetweenPortfolios** = ``"FungibleTokensMovedBetweenPortfolios"``

#### Defined in

[middleware/types.ts:78034](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78034)

___

### GlobalCommissionUpdated

• **GlobalCommissionUpdated** = ``"GlobalCommissionUpdated"``

#### Defined in

[middleware/types.ts:78035](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78035)

___

### GroupChanged

• **GroupChanged** = ``"GroupChanged"``

#### Defined in

[middleware/types.ts:78036](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78036)

___

### GroupCreated

• **GroupCreated** = ``"GroupCreated"``

#### Defined in

[middleware/types.ts:78037](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78037)

___

### GroupPermissionsUpdated

• **GroupPermissionsUpdated** = ``"GroupPermissionsUpdated"``

#### Defined in

[middleware/types.ts:78038](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78038)

___

### HeartbeatReceived

• **HeartbeatReceived** = ``"HeartbeatReceived"``

#### Defined in

[middleware/types.ts:78039](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78039)

___

### HistoricalPipsPruned

• **HistoricalPipsPruned** = ``"HistoricalPipsPruned"``

#### Defined in

[middleware/types.ts:78040](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78040)

___

### IdentifiersUpdated

• **IdentifiersUpdated** = ``"IdentifiersUpdated"``

#### Defined in

[middleware/types.ts:78041](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78041)

___

### IndexAssigned

• **IndexAssigned** = ``"IndexAssigned"``

#### Defined in

[middleware/types.ts:78042](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78042)

___

### IndexFreed

• **IndexFreed** = ``"IndexFreed"``

#### Defined in

[middleware/types.ts:78043](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78043)

___

### IndexFrozen

• **IndexFrozen** = ``"IndexFrozen"``

#### Defined in

[middleware/types.ts:78044](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78044)

___

### IndividualCommissionEnabled

• **IndividualCommissionEnabled** = ``"IndividualCommissionEnabled"``

#### Defined in

[middleware/types.ts:78045](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78045)

___

### Instantiated

• **Instantiated** = ``"Instantiated"``

#### Defined in

[middleware/types.ts:78046](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78046)

___

### InstantiationFeeChanged

• **InstantiationFeeChanged** = ``"InstantiationFeeChanged"``

#### Defined in

[middleware/types.ts:78047](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78047)

___

### InstantiationFreezed

• **InstantiationFreezed** = ``"InstantiationFreezed"``

#### Defined in

[middleware/types.ts:78048](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78048)

___

### InstantiationUnFreezed

• **InstantiationUnFreezed** = ``"InstantiationUnFreezed"``

#### Defined in

[middleware/types.ts:78049](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78049)

___

### InstructionAffirmed

• **InstructionAffirmed** = ``"InstructionAffirmed"``

#### Defined in

[middleware/types.ts:78050](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78050)

___

### InstructionAuthorized

• **InstructionAuthorized** = ``"InstructionAuthorized"``

#### Defined in

[middleware/types.ts:78051](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78051)

___

### InstructionAutomaticallyAffirmed

• **InstructionAutomaticallyAffirmed** = ``"InstructionAutomaticallyAffirmed"``

#### Defined in

[middleware/types.ts:78052](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78052)

___

### InstructionCreated

• **InstructionCreated** = ``"InstructionCreated"``

#### Defined in

[middleware/types.ts:78053](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78053)

___

### InstructionExecuted

• **InstructionExecuted** = ``"InstructionExecuted"``

#### Defined in

[middleware/types.ts:78054](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78054)

___

### InstructionFailed

• **InstructionFailed** = ``"InstructionFailed"``

#### Defined in

[middleware/types.ts:78055](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78055)

___

### InstructionMediators

• **InstructionMediators** = ``"InstructionMediators"``

#### Defined in

[middleware/types.ts:78056](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78056)

___

### InstructionRejected

• **InstructionRejected** = ``"InstructionRejected"``

#### Defined in

[middleware/types.ts:78057](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78057)

___

### InstructionRescheduled

• **InstructionRescheduled** = ``"InstructionRescheduled"``

#### Defined in

[middleware/types.ts:78058](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78058)

___

### InstructionUnauthorized

• **InstructionUnauthorized** = ``"InstructionUnauthorized"``

#### Defined in

[middleware/types.ts:78059](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78059)

___

### InstructionV2Created

• **InstructionV2Created** = ``"InstructionV2Created"``

#### Defined in

[middleware/types.ts:78060](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78060)

___

### InvalidatedNominators

• **InvalidatedNominators** = ``"InvalidatedNominators"``

#### Defined in

[middleware/types.ts:78061](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78061)

___

### Invested

• **Invested** = ``"Invested"``

#### Defined in

[middleware/types.ts:78062](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78062)

___

### InvestorUniquenessClaimNotAllowed

• **InvestorUniquenessClaimNotAllowed** = ``"InvestorUniquenessClaimNotAllowed"``

#### Defined in

[middleware/types.ts:78063](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78063)

___

### IsIssuable

• **IsIssuable** = ``"IsIssuable"``

#### Defined in

[middleware/types.ts:78064](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78064)

___

### Issued

• **Issued** = ``"Issued"``

#### Defined in

[middleware/types.ts:78065](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78065)

___

### IssuedNft

• **IssuedNft** = ``"IssuedNFT"``

#### Defined in

[middleware/types.ts:78066](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78066)

___

### ItemCompleted

• **ItemCompleted** = ``"ItemCompleted"``

#### Defined in

[middleware/types.ts:78067](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78067)

___

### ItemFailed

• **ItemFailed** = ``"ItemFailed"``

#### Defined in

[middleware/types.ts:78068](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78068)

___

### ItnRewardClaimed

• **ItnRewardClaimed** = ``"ItnRewardClaimed"``

#### Defined in

[middleware/types.ts:78069](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78069)

___

### KeyChanged

• **KeyChanged** = ``"KeyChanged"``

#### Defined in

[middleware/types.ts:78070](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78070)

___

### Kicked

• **Kicked** = ``"Kicked"``

#### Defined in

[middleware/types.ts:78071](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78071)

___

### KilledAccount

• **KilledAccount** = ``"KilledAccount"``

#### Defined in

[middleware/types.ts:78072](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78072)

___

### LegFailedExecution

• **LegFailedExecution** = ``"LegFailedExecution"``

#### Defined in

[middleware/types.ts:78073](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78073)

___

### LocalMetadataKeyDeleted

• **LocalMetadataKeyDeleted** = ``"LocalMetadataKeyDeleted"``

#### Defined in

[middleware/types.ts:78074](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78074)

___

### MasterKeyUpdated

• **MasterKeyUpdated** = ``"MasterKeyUpdated"``

#### Defined in

[middleware/types.ts:78075](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78075)

___

### MaxDetailsLengthChanged

• **MaxDetailsLengthChanged** = ``"MaxDetailsLengthChanged"``

#### Defined in

[middleware/types.ts:78076](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78076)

___

### MaxPipSkipCountChanged

• **MaxPipSkipCountChanged** = ``"MaxPipSkipCountChanged"``

#### Defined in

[middleware/types.ts:78077](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78077)

___

### MaximumSchedulesComplexityChanged

• **MaximumSchedulesComplexityChanged** = ``"MaximumSchedulesComplexityChanged"``

#### Defined in

[middleware/types.ts:78078](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78078)

___

### MediatorAffirmationReceived

• **MediatorAffirmationReceived** = ``"MediatorAffirmationReceived"``

#### Defined in

[middleware/types.ts:78079](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78079)

___

### MediatorAffirmationWithdrawn

• **MediatorAffirmationWithdrawn** = ``"MediatorAffirmationWithdrawn"``

#### Defined in

[middleware/types.ts:78080](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78080)

___

### MemberAdded

• **MemberAdded** = ``"MemberAdded"``

#### Defined in

[middleware/types.ts:78081](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78081)

___

### MemberRemoved

• **MemberRemoved** = ``"MemberRemoved"``

#### Defined in

[middleware/types.ts:78082](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78082)

___

### MemberRevoked

• **MemberRevoked** = ``"MemberRevoked"``

#### Defined in

[middleware/types.ts:78083](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78083)

___

### MembersReset

• **MembersReset** = ``"MembersReset"``

#### Defined in

[middleware/types.ts:78084](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78084)

___

### MembersSwapped

• **MembersSwapped** = ``"MembersSwapped"``

#### Defined in

[middleware/types.ts:78085](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78085)

___

### MetaChanged

• **MetaChanged** = ``"MetaChanged"``

#### Defined in

[middleware/types.ts:78086](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78086)

___

### MetadataValueDeleted

• **MetadataValueDeleted** = ``"MetadataValueDeleted"``

#### Defined in

[middleware/types.ts:78087](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78087)

___

### MinimumBondThresholdUpdated

• **MinimumBondThresholdUpdated** = ``"MinimumBondThresholdUpdated"``

#### Defined in

[middleware/types.ts:78088](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78088)

___

### MinimumProposalDepositChanged

• **MinimumProposalDepositChanged** = ``"MinimumProposalDepositChanged"``

#### Defined in

[middleware/types.ts:78089](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78089)

___

### MockInvestorUidCreated

• **MockInvestorUidCreated** = ``"MockInvestorUIDCreated"``

#### Defined in

[middleware/types.ts:78090](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78090)

___

### MovedBetweenPortfolios

• **MovedBetweenPortfolios** = ``"MovedBetweenPortfolios"``

#### Defined in

[middleware/types.ts:78091](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78091)

___

### MultiSigAddedAdmin

• **MultiSigAddedAdmin** = ``"MultiSigAddedAdmin"``

#### Defined in

[middleware/types.ts:78092](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78092)

___

### MultiSigCreated

• **MultiSigCreated** = ``"MultiSigCreated"``

#### Defined in

[middleware/types.ts:78093](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78093)

___

### MultiSigRemovedAdmin

• **MultiSigRemovedAdmin** = ``"MultiSigRemovedAdmin"``

#### Defined in

[middleware/types.ts:78094](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78094)

___

### MultiSigRemovedPayingDid

• **MultiSigRemovedPayingDid** = ``"MultiSigRemovedPayingDid"``

#### Defined in

[middleware/types.ts:78095](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78095)

___

### MultiSigSignaturesRequiredChanged

• **MultiSigSignaturesRequiredChanged** = ``"MultiSigSignaturesRequiredChanged"``

#### Defined in

[middleware/types.ts:78096](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78096)

___

### MultiSigSignerAdded

• **MultiSigSignerAdded** = ``"MultiSigSignerAdded"``

#### Defined in

[middleware/types.ts:78097](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78097)

___

### MultiSigSignerAuthorized

• **MultiSigSignerAuthorized** = ``"MultiSigSignerAuthorized"``

#### Defined in

[middleware/types.ts:78098](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78098)

___

### MultiSigSignerRemoved

• **MultiSigSignerRemoved** = ``"MultiSigSignerRemoved"``

#### Defined in

[middleware/types.ts:78099](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78099)

___

### MultiSigSignersAuthorized

• **MultiSigSignersAuthorized** = ``"MultiSigSignersAuthorized"``

#### Defined in

[middleware/types.ts:78100](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78100)

___

### MultiSigSignersRemoved

• **MultiSigSignersRemoved** = ``"MultiSigSignersRemoved"``

#### Defined in

[middleware/types.ts:78101](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78101)

___

### MultiSigSignersRequiredChanged

• **MultiSigSignersRequiredChanged** = ``"MultiSigSignersRequiredChanged"``

#### Defined in

[middleware/types.ts:78102](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78102)

___

### NewAccount

• **NewAccount** = ``"NewAccount"``

#### Defined in

[middleware/types.ts:78105](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78105)

___

### NewAssetRuleCreated

• **NewAssetRuleCreated** = ``"NewAssetRuleCreated"``

#### Defined in

[middleware/types.ts:78106](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78106)

___

### NewAuthorities

• **NewAuthorities** = ``"NewAuthorities"``

#### Defined in

[middleware/types.ts:78107](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78107)

___

### NewSession

• **NewSession** = ``"NewSession"``

#### Defined in

[middleware/types.ts:78108](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78108)

___

### NfTsMovedBetweenPortfolios

• **NfTsMovedBetweenPortfolios** = ``"NFTsMovedBetweenPortfolios"``

#### Defined in

[middleware/types.ts:78104](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78104)

___

### NftCollectionCreated

• **NftCollectionCreated** = ``"NftCollectionCreated"``

#### Defined in

[middleware/types.ts:78109](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78109)

___

### NftPortfolioUpdated

• **NftPortfolioUpdated** = ``"NFTPortfolioUpdated"``

#### Defined in

[middleware/types.ts:78103](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78103)

___

### Nominated

• **Nominated** = ``"Nominated"``

#### Defined in

[middleware/types.ts:78110](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78110)

___

### Noted

• **Noted** = ``"Noted"``

#### Defined in

[middleware/types.ts:78111](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78111)

___

### OffChainAuthorizationRevoked

• **OffChainAuthorizationRevoked** = ``"OffChainAuthorizationRevoked"``

#### Defined in

[middleware/types.ts:78112](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78112)

___

### Offence

• **Offence** = ``"Offence"``

#### Defined in

[middleware/types.ts:78113](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78113)

___

### OldSlashingReportDiscarded

• **OldSlashingReportDiscarded** = ``"OldSlashingReportDiscarded"``

#### Defined in

[middleware/types.ts:78114](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78114)

___

### Paused

• **Paused** = ``"Paused"``

#### Defined in

[middleware/types.ts:78115](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78115)

___

### PayoutStarted

• **PayoutStarted** = ``"PayoutStarted"``

#### Defined in

[middleware/types.ts:78116](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78116)

___

### PendingPipExpiryChanged

• **PendingPipExpiryChanged** = ``"PendingPipExpiryChanged"``

#### Defined in

[middleware/types.ts:78117](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78117)

___

### PeriodicFailed

• **PeriodicFailed** = ``"PeriodicFailed"``

#### Defined in

[middleware/types.ts:78118](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78118)

___

### PermanentlyOverweight

• **PermanentlyOverweight** = ``"PermanentlyOverweight"``

#### Defined in

[middleware/types.ts:78119](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78119)

___

### PermissionedIdentityAdded

• **PermissionedIdentityAdded** = ``"PermissionedIdentityAdded"``

#### Defined in

[middleware/types.ts:78120](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78120)

___

### PermissionedIdentityRemoved

• **PermissionedIdentityRemoved** = ``"PermissionedIdentityRemoved"``

#### Defined in

[middleware/types.ts:78121](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78121)

___

### PermissionedValidatorAdded

• **PermissionedValidatorAdded** = ``"PermissionedValidatorAdded"``

#### Defined in

[middleware/types.ts:78122](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78122)

___

### PermissionedValidatorRemoved

• **PermissionedValidatorRemoved** = ``"PermissionedValidatorRemoved"``

#### Defined in

[middleware/types.ts:78123](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78123)

___

### PermissionedValidatorStatusChanged

• **PermissionedValidatorStatusChanged** = ``"PermissionedValidatorStatusChanged"``

#### Defined in

[middleware/types.ts:78124](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78124)

___

### PhaseTransitioned

• **PhaseTransitioned** = ``"PhaseTransitioned"``

#### Defined in

[middleware/types.ts:78125](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78125)

___

### PipClosed

• **PipClosed** = ``"PipClosed"``

#### Defined in

[middleware/types.ts:78126](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78126)

___

### PipSkipped

• **PipSkipped** = ``"PipSkipped"``

#### Defined in

[middleware/types.ts:78127](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78127)

___

### PlaceholderFillBlock

• **PlaceholderFillBlock** = ``"PlaceholderFillBlock"``

#### Defined in

[middleware/types.ts:78128](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78128)

___

### PortfolioCreated

• **PortfolioCreated** = ``"PortfolioCreated"``

#### Defined in

[middleware/types.ts:78129](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78129)

___

### PortfolioCustodianChanged

• **PortfolioCustodianChanged** = ``"PortfolioCustodianChanged"``

#### Defined in

[middleware/types.ts:78130](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78130)

___

### PortfolioDeleted

• **PortfolioDeleted** = ``"PortfolioDeleted"``

#### Defined in

[middleware/types.ts:78131](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78131)

___

### PortfolioRenamed

• **PortfolioRenamed** = ``"PortfolioRenamed"``

#### Defined in

[middleware/types.ts:78132](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78132)

___

### PreApprovedAsset

• **PreApprovedAsset** = ``"PreApprovedAsset"``

#### Defined in

[middleware/types.ts:78133](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78133)

___

### PreApprovedPortfolio

• **PreApprovedPortfolio** = ``"PreApprovedPortfolio"``

#### Defined in

[middleware/types.ts:78134](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78134)

___

### PrimaryIssuanceAgentTransfered

• **PrimaryIssuanceAgentTransfered** = ``"PrimaryIssuanceAgentTransfered"``

#### Defined in

[middleware/types.ts:78135](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78135)

___

### PrimaryIssuanceAgentTransferred

• **PrimaryIssuanceAgentTransferred** = ``"PrimaryIssuanceAgentTransferred"``

#### Defined in

[middleware/types.ts:78136](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78136)

___

### PrimaryKeyUpdated

• **PrimaryKeyUpdated** = ``"PrimaryKeyUpdated"``

#### Defined in

[middleware/types.ts:78137](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78137)

___

### ProposalAdded

• **ProposalAdded** = ``"ProposalAdded"``

#### Defined in

[middleware/types.ts:78138](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78138)

___

### ProposalApprovalVote

• **ProposalApprovalVote** = ``"ProposalApprovalVote"``

#### Defined in

[middleware/types.ts:78139](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78139)

___

### ProposalApproved

• **ProposalApproved** = ``"ProposalApproved"``

#### Defined in

[middleware/types.ts:78140](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78140)

___

### ProposalBondAdjusted

• **ProposalBondAdjusted** = ``"ProposalBondAdjusted"``

#### Defined in

[middleware/types.ts:78141](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78141)

___

### ProposalCoolOffPeriodChanged

• **ProposalCoolOffPeriodChanged** = ``"ProposalCoolOffPeriodChanged"``

#### Defined in

[middleware/types.ts:78142](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78142)

___

### ProposalCreated

• **ProposalCreated** = ``"ProposalCreated"``

#### Defined in

[middleware/types.ts:78143](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78143)

___

### ProposalDetailsAmended

• **ProposalDetailsAmended** = ``"ProposalDetailsAmended"``

#### Defined in

[middleware/types.ts:78144](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78144)

___

### ProposalDurationChanged

• **ProposalDurationChanged** = ``"ProposalDurationChanged"``

#### Defined in

[middleware/types.ts:78145](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78145)

___

### ProposalExecuted

• **ProposalExecuted** = ``"ProposalExecuted"``

#### Defined in

[middleware/types.ts:78146](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78146)

___

### ProposalExecutionFailed

• **ProposalExecutionFailed** = ``"ProposalExecutionFailed"``

#### Defined in

[middleware/types.ts:78147](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78147)

___

### ProposalFailedToExecute

• **ProposalFailedToExecute** = ``"ProposalFailedToExecute"``

#### Defined in

[middleware/types.ts:78148](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78148)

___

### ProposalRefund

• **ProposalRefund** = ``"ProposalRefund"``

#### Defined in

[middleware/types.ts:78149](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78149)

___

### ProposalRejected

• **ProposalRejected** = ``"ProposalRejected"``

#### Defined in

[middleware/types.ts:78150](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78150)

___

### ProposalRejectionVote

• **ProposalRejectionVote** = ``"ProposalRejectionVote"``

#### Defined in

[middleware/types.ts:78151](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78151)

___

### ProposalStateUpdated

• **ProposalStateUpdated** = ``"ProposalStateUpdated"``

#### Defined in

[middleware/types.ts:78152](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78152)

___

### Proposed

• **Proposed** = ``"Proposed"``

#### Defined in

[middleware/types.ts:78153](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78153)

___

### PutCodeFlagChanged

• **PutCodeFlagChanged** = ``"PutCodeFlagChanged"``

#### Defined in

[middleware/types.ts:78154](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78154)

___

### QuorumThresholdChanged

• **QuorumThresholdChanged** = ``"QuorumThresholdChanged"``

#### Defined in

[middleware/types.ts:78155](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78155)

___

### RangeChanged

• **RangeChanged** = ``"RangeChanged"``

#### Defined in

[middleware/types.ts:78157](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78157)

___

### RangeProofAdded

• **RangeProofAdded** = ``"RangeProofAdded"``

#### Defined in

[middleware/types.ts:78158](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78158)

___

### RangeProofVerified

• **RangeProofVerified** = ``"RangeProofVerified"``

#### Defined in

[middleware/types.ts:78159](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78159)

___

### RcvChanged

• **RcvChanged** = ``"RCVChanged"``

#### Defined in

[middleware/types.ts:78156](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78156)

___

### ReceiptClaimed

• **ReceiptClaimed** = ``"ReceiptClaimed"``

#### Defined in

[middleware/types.ts:78160](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78160)

___

### ReceiptUnclaimed

• **ReceiptUnclaimed** = ``"ReceiptUnclaimed"``

#### Defined in

[middleware/types.ts:78161](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78161)

___

### ReceiptValidityChanged

• **ReceiptValidityChanged** = ``"ReceiptValidityChanged"``

#### Defined in

[middleware/types.ts:78162](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78162)

___

### Reclaimed

• **Reclaimed** = ``"Reclaimed"``

#### Defined in

[middleware/types.ts:78163](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78163)

___

### RecordDateChanged

• **RecordDateChanged** = ``"RecordDateChanged"``

#### Defined in

[middleware/types.ts:78164](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78164)

___

### Redeemed

• **Redeemed** = ``"Redeemed"``

#### Defined in

[middleware/types.ts:78165](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78165)

___

### RedeemedNft

• **RedeemedNft** = ``"RedeemedNFT"``

#### Defined in

[middleware/types.ts:78166](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78166)

___

### ReferendumCreated

• **ReferendumCreated** = ``"ReferendumCreated"``

#### Defined in

[middleware/types.ts:78167](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78167)

___

### ReferendumScheduled

• **ReferendumScheduled** = ``"ReferendumScheduled"``

#### Defined in

[middleware/types.ts:78168](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78168)

___

### ReferendumStateUpdated

• **ReferendumStateUpdated** = ``"ReferendumStateUpdated"``

#### Defined in

[middleware/types.ts:78169](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78169)

___

### RegisterAssetMetadataGlobalType

• **RegisterAssetMetadataGlobalType** = ``"RegisterAssetMetadataGlobalType"``

#### Defined in

[middleware/types.ts:78170](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78170)

___

### RegisterAssetMetadataLocalType

• **RegisterAssetMetadataLocalType** = ``"RegisterAssetMetadataLocalType"``

#### Defined in

[middleware/types.ts:78171](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78171)

___

### Rejected

• **Rejected** = ``"Rejected"``

#### Defined in

[middleware/types.ts:78172](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78172)

___

### RelayedTx

• **RelayedTx** = ``"RelayedTx"``

#### Defined in

[middleware/types.ts:78173](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78173)

___

### ReleaseCoordinatorUpdated

• **ReleaseCoordinatorUpdated** = ``"ReleaseCoordinatorUpdated"``

#### Defined in

[middleware/types.ts:78174](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78174)

___

### Remarked

• **Remarked** = ``"Remarked"``

#### Defined in

[middleware/types.ts:78175](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78175)

___

### RemoveAssetAffirmationExemption

• **RemoveAssetAffirmationExemption** = ``"RemoveAssetAffirmationExemption"``

#### Defined in

[middleware/types.ts:78176](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78176)

___

### RemovePreApprovedAsset

• **RemovePreApprovedAsset** = ``"RemovePreApprovedAsset"``

#### Defined in

[middleware/types.ts:78177](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78177)

___

### Removed

• **Removed** = ``"Removed"``

#### Defined in

[middleware/types.ts:78178](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78178)

___

### RemovedPayingKey

• **RemovedPayingKey** = ``"RemovedPayingKey"``

#### Defined in

[middleware/types.ts:78179](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78179)

___

### Requested

• **Requested** = ``"Requested"``

#### Defined in

[middleware/types.ts:78180](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78180)

___

### ReserveRepatriated

• **ReserveRepatriated** = ``"ReserveRepatriated"``

#### Defined in

[middleware/types.ts:78181](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78181)

___

### Reserved

• **Reserved** = ``"Reserved"``

#### Defined in

[middleware/types.ts:78182](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78182)

___

### Restored

• **Restored** = ``"Restored"``

#### Defined in

[middleware/types.ts:78183](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78183)

___

### Resumed

• **Resumed** = ``"Resumed"``

#### Defined in

[middleware/types.ts:78184](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78184)

___

### RevokePreApprovedPortfolio

• **RevokePreApprovedPortfolio** = ``"RevokePreApprovedPortfolio"``

#### Defined in

[middleware/types.ts:78185](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78185)

___

### Reward

• **Reward** = ``"Reward"``

#### Defined in

[middleware/types.ts:78186](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78186)

___

### RewardPaymentSchedulingInterrupted

• **RewardPaymentSchedulingInterrupted** = ``"RewardPaymentSchedulingInterrupted"``

#### Defined in

[middleware/types.ts:78187](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78187)

___

### Rewarded

• **Rewarded** = ``"Rewarded"``

#### Defined in

[middleware/types.ts:78188](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78188)

___

### ScRuntimeCall

• **ScRuntimeCall** = ``"SCRuntimeCall"``

#### Defined in

[middleware/types.ts:78189](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78189)

___

### ScheduleCreated

• **ScheduleCreated** = ``"ScheduleCreated"``

#### Defined in

[middleware/types.ts:78190](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78190)

___

### ScheduleRemoved

• **ScheduleRemoved** = ``"ScheduleRemoved"``

#### Defined in

[middleware/types.ts:78191](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78191)

___

### ScheduleUpdated

• **ScheduleUpdated** = ``"ScheduleUpdated"``

#### Defined in

[middleware/types.ts:78192](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78192)

___

### Scheduled

• **Scheduled** = ``"Scheduled"``

#### Defined in

[middleware/types.ts:78193](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78193)

___

### SchedulingFailed

• **SchedulingFailed** = ``"SchedulingFailed"``

#### Defined in

[middleware/types.ts:78194](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78194)

___

### SecondaryKeyLeftIdentity

• **SecondaryKeyLeftIdentity** = ``"SecondaryKeyLeftIdentity"``

#### Defined in

[middleware/types.ts:78195](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78195)

___

### SecondaryKeyPermissionsUpdated

• **SecondaryKeyPermissionsUpdated** = ``"SecondaryKeyPermissionsUpdated"``

#### Defined in

[middleware/types.ts:78196](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78196)

___

### SecondaryKeysAdded

• **SecondaryKeysAdded** = ``"SecondaryKeysAdded"``

#### Defined in

[middleware/types.ts:78197](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78197)

___

### SecondaryKeysFrozen

• **SecondaryKeysFrozen** = ``"SecondaryKeysFrozen"``

#### Defined in

[middleware/types.ts:78198](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78198)

___

### SecondaryKeysRemoved

• **SecondaryKeysRemoved** = ``"SecondaryKeysRemoved"``

#### Defined in

[middleware/types.ts:78199](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78199)

___

### SecondaryKeysUnfrozen

• **SecondaryKeysUnfrozen** = ``"SecondaryKeysUnfrozen"``

#### Defined in

[middleware/types.ts:78200](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78200)

___

### SecondaryPermissionsUpdated

• **SecondaryPermissionsUpdated** = ``"SecondaryPermissionsUpdated"``

#### Defined in

[middleware/types.ts:78201](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78201)

___

### SetAssetMediators

• **SetAssetMediators** = ``"SetAssetMediators"``

#### Defined in

[middleware/types.ts:78202](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78202)

___

### SetAssetMetadataValue

• **SetAssetMetadataValue** = ``"SetAssetMetadataValue"``

#### Defined in

[middleware/types.ts:78203](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78203)

___

### SetAssetMetadataValueDetails

• **SetAssetMetadataValueDetails** = ``"SetAssetMetadataValueDetails"``

#### Defined in

[middleware/types.ts:78204](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78204)

___

### SetAssetTransferCompliance

• **SetAssetTransferCompliance** = ``"SetAssetTransferCompliance"``

#### Defined in

[middleware/types.ts:78205](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78205)

___

### SettlementManuallyExecuted

• **SettlementManuallyExecuted** = ``"SettlementManuallyExecuted"``

#### Defined in

[middleware/types.ts:78206](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78206)

___

### SignerLeft

• **SignerLeft** = ``"SignerLeft"``

#### Defined in

[middleware/types.ts:78207](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78207)

___

### SigningKeysAdded

• **SigningKeysAdded** = ``"SigningKeysAdded"``

#### Defined in

[middleware/types.ts:78208](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78208)

___

### SigningKeysFrozen

• **SigningKeysFrozen** = ``"SigningKeysFrozen"``

#### Defined in

[middleware/types.ts:78209](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78209)

___

### SigningKeysRemoved

• **SigningKeysRemoved** = ``"SigningKeysRemoved"``

#### Defined in

[middleware/types.ts:78210](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78210)

___

### SigningKeysUnfrozen

• **SigningKeysUnfrozen** = ``"SigningKeysUnfrozen"``

#### Defined in

[middleware/types.ts:78211](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78211)

___

### SigningPermissionsUpdated

• **SigningPermissionsUpdated** = ``"SigningPermissionsUpdated"``

#### Defined in

[middleware/types.ts:78212](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78212)

___

### Slash

• **Slash** = ``"Slash"``

#### Defined in

[middleware/types.ts:78213](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78213)

___

### SlashReported

• **SlashReported** = ``"SlashReported"``

#### Defined in

[middleware/types.ts:78214](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78214)

___

### Slashed

• **Slashed** = ``"Slashed"``

#### Defined in

[middleware/types.ts:78215](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78215)

___

### SlashingAllowedForChanged

• **SlashingAllowedForChanged** = ``"SlashingAllowedForChanged"``

#### Defined in

[middleware/types.ts:78216](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78216)

___

### SlashingParamsUpdated

• **SlashingParamsUpdated** = ``"SlashingParamsUpdated"``

#### Defined in

[middleware/types.ts:78217](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78217)

___

### SnapshotCleared

• **SnapshotCleared** = ``"SnapshotCleared"``

#### Defined in

[middleware/types.ts:78218](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78218)

___

### SnapshotResultsEnacted

• **SnapshotResultsEnacted** = ``"SnapshotResultsEnacted"``

#### Defined in

[middleware/types.ts:78219](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78219)

___

### SnapshotTaken

• **SnapshotTaken** = ``"SnapshotTaken"``

#### Defined in

[middleware/types.ts:78220](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78220)

___

### SolutionStored

• **SolutionStored** = ``"SolutionStored"``

#### Defined in

[middleware/types.ts:78221](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78221)

___

### SomeOffline

• **SomeOffline** = ``"SomeOffline"``

#### Defined in

[middleware/types.ts:78222](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78222)

___

### StakersElected

• **StakersElected** = ``"StakersElected"``

#### Defined in

[middleware/types.ts:78223](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78223)

___

### StakingElection

• **StakingElection** = ``"StakingElection"``

#### Defined in

[middleware/types.ts:78224](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78224)

___

### StatTypesAdded

• **StatTypesAdded** = ``"StatTypesAdded"``

#### Defined in

[middleware/types.ts:78225](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78225)

___

### StatTypesRemoved

• **StatTypesRemoved** = ``"StatTypesRemoved"``

#### Defined in

[middleware/types.ts:78226](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78226)

___

### Sudid

• **Sudid** = ``"Sudid"``

#### Defined in

[middleware/types.ts:78227](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78227)

___

### SudoAsDone

• **SudoAsDone** = ``"SudoAsDone"``

#### Defined in

[middleware/types.ts:78228](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78228)

___

### TemplateInstantiationFeeChanged

• **TemplateInstantiationFeeChanged** = ``"TemplateInstantiationFeeChanged"``

#### Defined in

[middleware/types.ts:78229](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78229)

___

### TemplateMetaUrlChanged

• **TemplateMetaUrlChanged** = ``"TemplateMetaUrlChanged"``

#### Defined in

[middleware/types.ts:78230](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78230)

___

### TemplateOwnershipTransferred

• **TemplateOwnershipTransferred** = ``"TemplateOwnershipTransferred"``

#### Defined in

[middleware/types.ts:78231](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78231)

___

### TemplateUsageFeeChanged

• **TemplateUsageFeeChanged** = ``"TemplateUsageFeeChanged"``

#### Defined in

[middleware/types.ts:78232](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78232)

___

### Terminated

• **Terminated** = ``"Terminated"``

#### Defined in

[middleware/types.ts:78233](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78233)

___

### TickerLinkedToAsset

• **TickerLinkedToAsset** = ``"TickerLinkedToAsset"``

#### Defined in

[middleware/types.ts:78234](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78234)

___

### TickerRegistered

• **TickerRegistered** = ``"TickerRegistered"``

#### Defined in

[middleware/types.ts:78235](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78235)

___

### TickerTransferred

• **TickerTransferred** = ``"TickerTransferred"``

#### Defined in

[middleware/types.ts:78236](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78236)

___

### TickerUnlinkedFromAsset

• **TickerUnlinkedFromAsset** = ``"TickerUnlinkedFromAsset"``

#### Defined in

[middleware/types.ts:78237](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78237)

___

### TimelockChanged

• **TimelockChanged** = ``"TimelockChanged"``

#### Defined in

[middleware/types.ts:78238](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78238)

___

### TransactionAffirmed

• **TransactionAffirmed** = ``"TransactionAffirmed"``

#### Defined in

[middleware/types.ts:78239](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78239)

___

### TransactionCreated

• **TransactionCreated** = ``"TransactionCreated"``

#### Defined in

[middleware/types.ts:78240](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78240)

___

### TransactionExecuted

• **TransactionExecuted** = ``"TransactionExecuted"``

#### Defined in

[middleware/types.ts:78241](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78241)

___

### TransactionFeePaid

• **TransactionFeePaid** = ``"TransactionFeePaid"``

#### Defined in

[middleware/types.ts:78242](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78242)

___

### TransactionRejected

• **TransactionRejected** = ``"TransactionRejected"``

#### Defined in

[middleware/types.ts:78243](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78243)

___

### Transfer

• **Transfer** = ``"Transfer"``

#### Defined in

[middleware/types.ts:78244](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78244)

___

### TransferConditionExemptionsAdded

• **TransferConditionExemptionsAdded** = ``"TransferConditionExemptionsAdded"``

#### Defined in

[middleware/types.ts:78245](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78245)

___

### TransferConditionExemptionsRemoved

• **TransferConditionExemptionsRemoved** = ``"TransferConditionExemptionsRemoved"``

#### Defined in

[middleware/types.ts:78246](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78246)

___

### TransferManagerAdded

• **TransferManagerAdded** = ``"TransferManagerAdded"``

#### Defined in

[middleware/types.ts:78247](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78247)

___

### TransferManagerRemoved

• **TransferManagerRemoved** = ``"TransferManagerRemoved"``

#### Defined in

[middleware/types.ts:78248](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78248)

___

### TransferWithData

• **TransferWithData** = ``"TransferWithData"``

#### Defined in

[middleware/types.ts:78249](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78249)

___

### TreasuryDidSet

• **TreasuryDidSet** = ``"TreasuryDidSet"``

#### Defined in

[middleware/types.ts:78250](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78250)

___

### TreasuryDisbursement

• **TreasuryDisbursement** = ``"TreasuryDisbursement"``

#### Defined in

[middleware/types.ts:78251](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78251)

___

### TreasuryDisbursementFailed

• **TreasuryDisbursementFailed** = ``"TreasuryDisbursementFailed"``

#### Defined in

[middleware/types.ts:78252](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78252)

___

### TreasuryReimbursement

• **TreasuryReimbursement** = ``"TreasuryReimbursement"``

#### Defined in

[middleware/types.ts:78253](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78253)

___

### TrustedDefaultClaimIssuerAdded

• **TrustedDefaultClaimIssuerAdded** = ``"TrustedDefaultClaimIssuerAdded"``

#### Defined in

[middleware/types.ts:78254](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78254)

___

### TrustedDefaultClaimIssuerRemoved

• **TrustedDefaultClaimIssuerRemoved** = ``"TrustedDefaultClaimIssuerRemoved"``

#### Defined in

[middleware/types.ts:78255](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78255)

___

### TxRemoved

• **TxRemoved** = ``"TxRemoved"``

#### Defined in

[middleware/types.ts:78256](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78256)

___

### TxsHandled

• **TxsHandled** = ``"TxsHandled"``

#### Defined in

[middleware/types.ts:78257](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78257)

___

### Unbonded

• **Unbonded** = ``"Unbonded"``

#### Defined in

[middleware/types.ts:78258](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78258)

___

### UnexpectedError

• **UnexpectedError** = ``"UnexpectedError"``

#### Defined in

[middleware/types.ts:78259](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78259)

___

### Unfrozen

• **Unfrozen** = ``"Unfrozen"``

#### Defined in

[middleware/types.ts:78260](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78260)

___

### UnfrozenTx

• **UnfrozenTx** = ``"UnfrozenTx"``

#### Defined in

[middleware/types.ts:78261](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78261)

___

### Unreserved

• **Unreserved** = ``"Unreserved"``

#### Defined in

[middleware/types.ts:78262](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78262)

___

### UpdatedPolyxLimit

• **UpdatedPolyxLimit** = ``"UpdatedPolyxLimit"``

#### Defined in

[middleware/types.ts:78263](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78263)

___

### UserPortfolios

• **UserPortfolios** = ``"UserPortfolios"``

#### Defined in

[middleware/types.ts:78264](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78264)

___

### ValidatorPrefsSet

• **ValidatorPrefsSet** = ``"ValidatorPrefsSet"``

#### Defined in

[middleware/types.ts:78265](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78265)

___

### VenueCreated

• **VenueCreated** = ``"VenueCreated"``

#### Defined in

[middleware/types.ts:78266](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78266)

___

### VenueDetailsUpdated

• **VenueDetailsUpdated** = ``"VenueDetailsUpdated"``

#### Defined in

[middleware/types.ts:78267](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78267)

___

### VenueFiltering

• **VenueFiltering** = ``"VenueFiltering"``

#### Defined in

[middleware/types.ts:78268](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78268)

___

### VenueSignersUpdated

• **VenueSignersUpdated** = ``"VenueSignersUpdated"``

#### Defined in

[middleware/types.ts:78269](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78269)

___

### VenueTypeUpdated

• **VenueTypeUpdated** = ``"VenueTypeUpdated"``

#### Defined in

[middleware/types.ts:78270](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78270)

___

### VenueUnauthorized

• **VenueUnauthorized** = ``"VenueUnauthorized"``

#### Defined in

[middleware/types.ts:78271](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78271)

___

### VenueUpdated

• **VenueUpdated** = ``"VenueUpdated"``

#### Defined in

[middleware/types.ts:78272](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78272)

___

### VenuesAllowed

• **VenuesAllowed** = ``"VenuesAllowed"``

#### Defined in

[middleware/types.ts:78273](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78273)

___

### VenuesBlocked

• **VenuesBlocked** = ``"VenuesBlocked"``

#### Defined in

[middleware/types.ts:78274](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78274)

___

### VoteCast

• **VoteCast** = ``"VoteCast"``

#### Defined in

[middleware/types.ts:78275](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78275)

___

### VoteEnactReferendum

• **VoteEnactReferendum** = ``"VoteEnactReferendum"``

#### Defined in

[middleware/types.ts:78276](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78276)

___

### VoteRejectReferendum

• **VoteRejectReferendum** = ``"VoteRejectReferendum"``

#### Defined in

[middleware/types.ts:78277](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78277)

___

### VoteRetracted

• **VoteRetracted** = ``"VoteRetracted"``

#### Defined in

[middleware/types.ts:78278](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78278)

___

### VoteThresholdUpdated

• **VoteThresholdUpdated** = ``"VoteThresholdUpdated"``

#### Defined in

[middleware/types.ts:78279](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78279)

___

### Voted

• **Voted** = ``"Voted"``

#### Defined in

[middleware/types.ts:78280](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78280)

___

### Withdrawn

• **Withdrawn** = ``"Withdrawn"``

#### Defined in

[middleware/types.ts:78281](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/middleware/types.ts#L78281)
